@@ -35,6 +35,16 @@
   <launchable type="desktop-id">org.gnome.Mines.desktop</launchable>
   <project_group>GNOME</project_group>
   <releases>
+    <release version="49~rc" date="2025-08-30" type="development">
+      <description>
+        <ul>
+          <li>Updated translations</li>
+          <li>Updated screenshot (Yoav Morag)</li>
+          <li>Use libgnome-games as subproject (Will Warner)</li>
+          <li>Unparent minefield view aspect frame (Michael Catanzaro)</li>
+        </ul>
+      </description>
+    </release>
     <release version="49~beta" date="2025-08-02" type="development">
       <description>
         <ul>
